# cineast-api/src/main/java/org/vitrivr/cineast/api/util/QueryUtil.java
@@ -12,6 +12,7 @@ import java.util.Map;
 import java.util.stream.Collectors;
 import org.vitrivr.cineast.api.messages.query.QueryComponent;
 import org.vitrivr.cineast.api.messages.query.QueryTerm;
+import org.vitrivr.cineast.api.messages.result.AllFeaturesByCategoryQueryResult;
 import org.vitrivr.cineast.api.messages.result.FeaturesAllCategoriesQueryResult;
 import org.vitrivr.cineast.core.config.ReadableQueryConfig;
 import org.vitrivr.cineast.core.data.Pair;
@@ -192,7 +193,7 @@ public class QueryUtil {
             row.get(FEATURE_COLUMN_QUALIFIER).toObject()
         ).forEach(_return::add);
       });
-      return false; //no repeat invocations allowed
+      return true; // TODO Verify this.
     });
     return _return;
   }
@@ -211,19 +212,63 @@ public class QueryUtil {
     Map<String, Object[]> features = new HashMap<>();
     final RetrievalRuntimeConfig retrievalRuntimeConfig = Config.sharedConfig().getRetriever();
     final DBSelector selector = Config.sharedConfig().getDatabase().getSelectorSupplier().get();
+
     retrievalRuntimeConfig.getRetrieverCategories().forEach(cat -> {
-      retrievalRuntimeConfig.getRetrieversByCategory(cat).forEachKey(retriever -> {
-        List<Object> _features = retrieveFeaturesForIDByCategory(id, cat);
-        if (_features.size() == 0) {
-          return false; //no repeat invocations allowed
-        }
-        if (_features.get(0) != null) {
-          features.put(cat, _features.toArray());
-        }
-        return false; //no repeat invocations allowed
-      });
+      List<Object> _features = retrieveFeaturesForIDByCategory(id, cat);
+      if (_features.size() == 0) {
+        return;
+      }
+      if (_features.get(0) != null) {
+        features.put(cat, _features.toArray());
+      }
     });
+
     return new FeaturesAllCategoriesQueryResult("", features, id);
+  }
+
+  /**
+   * Retrieves features by category for all stored/available IDs.
+   *
+   * @param category The category of features to retrieve.
+   * @return A feature map containing a list of IDs/feature array for every object ID for every feature in the category.
+   */
+  private static Map<String, ArrayList<HashMap<String, Object>>> getAllFeaturesInCategory(String category) {
+    // TODO Simplify return data type.
+    final RetrievalRuntimeConfig retrievalRuntimeConfig = Config.sharedConfig().getRetriever();
+    final DBSelector selector = Config.sharedConfig().getDatabase().getSelectorSupplier().get();
+    Map<String, ArrayList<HashMap<String, Object>>> _return = new HashMap<>();
+
+    retrievalRuntimeConfig.getRetrieversByCategory(category).forEach(retriever -> {
+
+      retriever.getTableNames().forEach(tableName -> {
+
+        ArrayList<HashMap<String, Object>> currList = new ArrayList<>();
+        selector.open(tableName);
+        List<Map<String, PrimitiveTypeProvider>> rows = selector.getAll();
+
+        for (Map<String, PrimitiveTypeProvider> row : rows) {
+          HashMap<String, Object> tempMap = new HashMap<>();
+
+          tempMap.put(FEATURE_COLUMN_QUALIFIER, row.get(FEATURE_COLUMN_QUALIFIER).toObject());
+          tempMap.put(GENERIC_ID_COLUMN_QUALIFIER, row.get(GENERIC_ID_COLUMN_QUALIFIER).toObject());
+
+          currList.add(tempMap);
+        }
+
+        _return.put(tableName, currList);
+
+      });
+
+      return true;
+
+    });
+
+    return _return;
+  }
+
+  public static AllFeaturesByCategoryQueryResult retrieveAllFeaturesByCategory(String category) {
+    Map<String, ArrayList<HashMap<String, Object>>> features = getAllFeaturesInCategory(category);
+    return new AllFeaturesByCategoryQueryResult("", features, category);
   }
 
 }
